v2016-01-10
  * New "软件和世界，愚者的中二之语"
  * Modify mail address
  * Modify "友情链接"

v2016-01-06.2
  * Modify "友情链接"

v2016-01-06
  * Binding domain

v2016-01-05
  * Modify "友情链接"

v2016-01-02
  * Remove jiathis
  * Add key for duoshuo

v2016-01-03
  * New "随便写一点东西"
  * It Works!
