@@ -18,4 +18,5 @@ tags*
 # Temp
 /CNAME
 /img/
+/pages/
 
