@@ -6,7 +6,7 @@ tags:
   - 中二
 ---
 
-写这篇文章的现在心情有点糟，突然地被要求周末要去公司排练舞蹈，以后半个月也被不讲理的安排下班后加班排练，感觉自己完全把握不住自己的生活——作为一个程序员来说。
+写这篇文章的现在心情有点糟，突然地被要求周末要去公司排练舞蹈，以后半个月也被不讲理地安排下班后加班排练，感觉自己完全把握不住自己的生活——作为一个程序员来说。
 
 从毕业到现在大约已经工作5 个月了，老实说，并没有什么令人激动的事情发生。虽然写的一部分代码也可以说正在被很多很多人使用着，然而我觉得这并没有让他们的生活发生什么变化。周遭的生活被工作夺走了，但是心中的期待并没有得到回应，虽然这么说有一点点不讲理，但是内心还是有一点失落的。
 
@@ -34,7 +34,7 @@ tags:
 
 也造过很多其他的轮子，包括编码风格很让自己自豪的轮子，和代码量足足的轮子，但是都没有写上面提到的两个软件的那种奇妙的心情，也不会在以后用到的时候感觉“自己做了这个东西真的太好了”。
 
-这也是我一直没有实现的事情，写一个能够给很多人的生活带来好的改善的软件，或许以后可以实现，或许永远都实现不了，不过我还是有一点点期待，期待能够为肤色不同、语言相异的人们做一些好的事情。
+这也是我一直没有实现的事情，写一个能够给很多人的生活带来好的改变的软件，或许以后可以实现，或许永远都实现不了，不过我还是有一点点期待，期待能够为肤色不同、语言相异的人们做一些好的事情。
 
-感觉自己应该算一只愚者吧，智者会去引导世界，写出伟大的软件，给世界一份承诺甚至一个未来，愚者只能跟在智者后面搭积木，但是如果能做出一个可以改善这个世界中某一部分人们的日常生活的东西的话，那样就真的太好了。
+感觉自己应该算一只愚者吧，智者会去引导世界，写出伟大的软件，给世界一份承诺甚至一个未来，愚者只能跟在智者后面搭积木，但是如果能做出一个可以改变这个世界中某一部分人们的日常生活的东西的话，那样就真的太好了。
 
