@@ -1,3 +1,7 @@
+v2016-01-11
+  * Add 404 page
+  * Enable Google Analytics
+
 v2016-01-10
   * New "软件和世界，愚者的中二之语"
   * Modify mail address
